p3/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  # Pas besoin de namespace ici, ArgoCD le définit via la destination
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: playground-service
spec:
  selector:
    app: playground
  ports:
    - port: 80
      targetPort: 8888
