p3/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  # Pas de namespace spécifié - ArgoCD utilisera la destination (dev)
spec:
  ingressClassName: traefik
  rules:
    - host: playground.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground-service
                port:
                  number: 80
